增加南校区分支

--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
             </ul>*@
             <ul class="layui-nav layui-layout-left">
                 <li style="padding-top:5%">
-                    <a style="font-family:Cambria;font-size:x-large;color:white;width:100%">昆山康桥学校-报修系统(北)</a>
+                    <a style="font-family:Cambria;font-size:x-large;color:white;width:100%">昆山康桥学校-报修系统(南)</a>
                 </li>
             </ul>
 
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="layui-footer">
-            <p style="margin-left:300px">&copy; @DateTime.Now.Year - 888报修系统  若对报修系统有疑虑或系统发生错误，请洽资讯组 分机5509</p>
+            <p style="margin-left:300px">&copy; @DateTime.Now.Year - 888报修系统  若对报修系统有疑虑或系统发生错误，请洽资讯组</p>
         </div>
     </div>
 </body>
@@ -120,7 +120,7 @@
                 maxmin: true, // 是否允许最大化
                 shade: 0, // 隐藏弹框的遮罩层
                 //content: 'http://localhost:57616/888报修系统操作文档.pdf' // pdf的地址
-                content: 'http://192.168.80.148/888repair_ksnorth/888报修系统操作文档.pdf' // pdf的地址
+                content: 'http://192.168.80.148/888repair_ksSouth/888报修系统操作文档.pdf' // pdf的地址
             })
         });
 
