--- a/888repair/Views/Home/MobileIndex.cshtml
+++ b/888repair/Views/Home/MobileIndex.cshtml
@@ -26,7 +26,7 @@
         <div class="layui-header">
             <ul class="layui-nav layui-layout-left">
                 <li style="padding-top:5%;padding-left:0">
-                    <a style="font-family:Cambria;font-size:larger;color:white;width:100%">昆山康桥学校-报修系统(北)</a>
+                    <a style="font-family:Cambria;font-size:larger;color:white;width:100%">昆山康桥学校-报修系统(南)</a>
                 </li>
             </ul>
             <ul>
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="layui-footer" style="padding-bottom:6%">
-            <p style="font-size:smaller;line-height:30px">If you have any problem with the system, please contact IT section <br />若对报修系统有疑虑或系统发生错误，请洽资讯组 分机5509</p>
+            <p style="font-size:smaller;line-height:30px">If you have any problem with the system, please contact IT section <br />若对报修系统有疑虑或系统发生错误，请洽资讯组</p>
  
         </div>
     </div>
