--- a/888repair/Views/Login/LoginIndex.cshtml
+++ b/888repair/Views/Login/LoginIndex.cshtml
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>
-       昆山康桥学校-报修系统(北)
+        昆山康桥学校-报修系统(南)
     </title>
     <link rel="stylesheet" href="~/src/css/layui.css">
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
@@ -31,19 +31,19 @@
         </ul>*@
             <ul class="layui-nav layui-layout-left" id="phonetitle">
                 <li style="padding-top:5%;padding-left:0">
-                    <a style="font-family:Cambria;font-size:larger;color:white;width:100%">昆山康桥学校-报修系统(北)</a>
+                    <a style="font-family:Cambria;font-size:larger;color:white;width:100%">昆山康桥学校-报修系统(南)</a>
                 </li>
             </ul>
             <ul class="layui-nav layui-layout-left" id="PCtitle">
                 移动端显示
 
                 <li style="padding-top:5%">
-                    <a style="font-family:Cambria;font-size:large;color:white;width:100%">昆山康桥学校-报修系统(北)</a>
+                    <a style="font-family:Cambria;font-size:large;color:white;width:100%">昆山康桥学校-报修系统(南)</a>
                 </li>
             </ul>
             @*<div id="phonetitle">
-                <a style="font-family:Cambria;font-size:larger;color:white;width:100%">昆山康桥学校-报修系统(北)</a>
-            </div>*@
+            <a style="font-family:Cambria;font-size:larger;color:white;width:100%">昆山康桥学校-报修系统(南)</a>
+        </div>*@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item layui-hide layui-show-md-inline-block">
                     <a href="javascript:;">
