fix：辖区配对，业管配对，新增时取消系统类别的disabled控制

--- a/888repair/Views/Area/AreaIndex.cshtml
+++ b/888repair/Views/Area/AreaIndex.cshtml
@@ -276,6 +276,8 @@
             $('#btn_edit').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_del').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_search').addClass("layui-btn-disabled").attr("disabled", true);
+            $('#addKindCategory').removeClass("layui-disabled").removeAttr("disabled", "disabled");
+            $('#addSystemCategory').removeClass("layui-disabled").removeAttr("disabled", "disabled");
             $('select[name=addSystemCategory]').val("");
             $("#addBuilding").val("");
             $("#addLocation").val("");
