--- a/888repair/Views/Repair/ITRepairMobileVw.cshtml
+++ b/888repair/Views/Repair/ITRepairMobileVw.cshtml
@@ -100,21 +100,6 @@
             </div>
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label style="padding-left:0;line-height:30px;color:purple">Description(问题描述)：<span style="color:red">*</span></label>
-                    <div>
-                        <textarea id="Description" name="Description" style="width:100%;height:10%" lay-verify="required" placeholder="Please input description(请输入问题的描述)"/>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    <a style="color:cadetblue">Only one question is filled in this column. If there are multiple questions,
-                    please fill out a question, send it out, re-enter the "Filling in the problem" page, and fill out the repair form again<br />
-                    本栏位仅填写一项问题，如有多项问题需回报，请填报一项问题后，送出后，重新进入填写问题页面，再次填写报修单。</a>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-inline">
                     <label style="padding-left:0;line-height:30px;color:purple">Category(问题的类别)：<span style="color:red">*</span></label>
                     <div style="height:38px;width:300px">
                         <select ID="OpKindCategory" name="OpKindCategory" lay-filter="OpKindCategory" lay-verify="required">
@@ -124,6 +109,23 @@
                 </div>
                 <div class="layui-inline">
                     <label id="remark" style="height:38px;width:400px"></label>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <div class="layui-inline">
+                    <label style="padding-left:0;line-height:30px;color:purple">Description(问题描述)：<span style="color:red">*</span></label>
+                    <div>
+                        <textarea id="Description" name="Description" style="width:100%;height:10%" lay-verify="required" placeholder="Please input description(请输入问题的描述)" />
+                    </div>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <div class="layui-inline">
+                    <a style="color:cadetblue">
+                        Only one question is filled in this column. If there are multiple questions,
+                        please fill out a question, send it out, re-enter the "Filling in the problem" page, and fill out the repair form again<br />
+                        本栏位仅填写一项问题，如有多项问题需回报，请填报一项问题后，送出后，重新进入填写问题页面，再次填写报修单。
+                    </a>
                 </div>
             </div>
             <div class="layui-form-item">
