增加填写报修单提示上传图片不要使用转义符

--- a/888repair/Views/Repair/ITRepairMobileVw.cshtml
+++ b/888repair/Views/Repair/ITRepairMobileVw.cshtml
@@ -70,6 +70,8 @@
                 /
                 ※上传照片请勿有相同名称，不然会覆盖之前的上传照片
                 <br>
+                Please do not use% or/or for photo names; Or_ Other special characters/※照片名称请不要使用%或/或;或_等特殊字符。
+                <br>
                 Fields marked with * are required or selected /
                 &nbsp;&nbsp;带*号的栏位为必填或必选
             </label>
