fix上传图片时从前端获取时间戳

--- a/888repair/Views/Repair/ProblemAllDetailVw.cshtml
+++ b/888repair/Views/Repair/ProblemAllDetailVw.cshtml
@@ -360,7 +360,7 @@
 
         loadOption();
 
-        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
+        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHHmmss");
         var empno = '@(Session["EmpNo"])';
 
         $("body").on("click", ".imgview", function (e) {
@@ -641,6 +641,9 @@
                    // element.render('progress'); //渲染新加的进度条组件
 
                 });
+            }
+            , before: function (obj) {
+                this.data = { 'datestring': datetime };
             }
             , done: function (res, index, upload) { //成功的回调
                 var that = this;
