--- a/888repair/Views/Repair/LogRepairMobileVw.cshtml
+++ b/888repair/Views/Repair/LogRepairMobileVw.cshtml
@@ -239,7 +239,7 @@
 
         reloadDate();
 
-        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
+        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHHmmss");
 
         var username = '@(Session["fullname"])';
         var empno = '@(Session["EmpNo"])';
@@ -533,6 +533,9 @@
                     element.render('progress'); //渲染新加的进度条组件
 
                 });
+            }
+            , before: function (obj) {
+                this.data = { 'datestring': datetime };
             }
             , done: function (res, index, upload) { //成功的回调
                 var that = this;
