--- a/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
+++ b/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
@@ -398,7 +398,7 @@
         }
     }
 
-        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
+        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHHmmss");
         var empno = '@(Session["EmpNo"])';
 
         
@@ -833,6 +833,9 @@
                    // element.render('progress'); //渲染新加的进度条组件
 
                 });
+            }
+            , before: function (obj) {
+                this.data = { 'datestring': datetime };
             }
             , done: function (res, index, upload) { //成功的回调
                 var that = this;
