--- a/888repair/Views/Repair/ReplyRepairIndex.cshtml
+++ b/888repair/Views/Repair/ReplyRepairIndex.cshtml
@@ -342,7 +342,7 @@
 
             $("#OpCategory").empty(); 
             $.ajax({
-                url: "@(Url.Action("getKindBySystemCategory", "DDL"))",
+                url: "@(Url.Action("getKind", "DDL"))",
                 type: "POST",
                 dataType: 'json',
                 success: function (result) {
