fix类别未按系统类别带出的问题

--- a/888repair/Views/Repair/ProblemListIndex.cshtml
+++ b/888repair/Views/Repair/ProblemListIndex.cshtml
@@ -458,7 +458,7 @@
 
             $("#OpCategory").empty();
             $.ajax({
-                url: "@(Url.Action("getKindBySystemCategory", "DDL"))",
+                url: "@(Url.Action("getKind", "DDL"))",
                 type: "POST",
                 dataType: 'json',
                 success: function (result) {
